src/objects/OfertaEducativa__c.object
<CustomObject>
    <fields>
        <fullName>BecaConfiguarada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beca configuarada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beca</label>
        <referenceTo>Beca__c</referenceTo>
        <relationshipLabel>Ofertas Educativas</relationshipLabel>
        <relationshipName>OfertasEducativas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conceptos__c</fullName>
        <description>Muestra todos los conceptos de pago capturados en el objeto Pagos oferta</description>
        <label>Conceptos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Descuento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Descuento</label>
        <referenceTo>Descuento__c</referenceTo>
        <relationshipLabel>Ofertas Educativas</relationshipLabel>
        <relationshipName>Ofertas_Educativas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DuracionPrograma__c</fullName>
        <formula>Text( RvoeVigente__r.DuracionPrograma__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duración del programa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnvioAlerta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envió alerta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GrupoConfigurado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grupo configurado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <label>Grupo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Modalidad__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Modalidad</inlineHelpText>
        <label>Modalidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Modalidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Ofertas Educativas</relationshipLabel>
        <relationshipName>Ofertas_Educativas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Nivel</inlineHelpText>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Ofertas Educativas (Nivel)</relationshipLabel>
        <relationshipName>Ofertas_Educativas1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumPropedeuticos__c</fullName>
        <description>Número de propedeuticos</description>
        <label>#P</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumeroColegiaturas__c</fullName>
        <inlineHelpText>Número de colegiaturas</inlineHelpText>
        <label>#C</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumeroInscripciones__c</fullName>
        <inlineHelpText>Número de inscripciones</inlineHelpText>
        <label>#I</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumeroMensualidades__c</fullName>
        <label>Número de mensualidades</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagoConfigurado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pago configurado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Periodicidad__c</fullName>
        <formula>Text( RvoeVigente__r.Periodicidad__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periodicidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Periodo</label>
        <referenceTo>Periodo__c</referenceTo>
        <relationshipLabel>Ofertas Educativas</relationshipLabel>
        <relationshipName>Ofertas_Educativas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Plantel</inlineHelpText>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Ofertas Educativas</relationshipLabel>
        <relationshipName>Ofertas_Educativas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Programa</inlineHelpText>
        <label>Programa</label>
        <referenceTo>Programa__c</referenceTo>
        <relationshipLabel>Ofertas Educativas</relationshipLabel>
        <relationshipName>Ofertas_Educativas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RvoeVigente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RVOE vigente asociado al programa al momento de configurar la oferta educativa</description>
        <label>RVOE Vigente</label>
        <referenceTo>RVOE__c</referenceTo>
        <relationshipLabel>Ofertas Educativas</relationshipLabel>
        <relationshipName>Ofertas_Educativas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <label>Oferta Educativa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Nivel__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Periodicidad__c</columns>
        <columns>Periodo__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>AllPeriodo</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Nivel__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Periodicidad__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Periodo__c</field>
            <operation>contains</operation>
            <value>Mayo</value>
        </filters>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filters>
        <label>Todos periodo</label>
    </listViews>
    <listViews>
        <fullName>Ejecutiva</fullName>
        <columns>Modalidad__c</columns>
        <columns>Nivel__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Ejecutiva</value>
        </filters>
        <label>Ejecutiva</label>
    </listViews>
    <listViews>
        <fullName>Online</fullName>
        <columns>Modalidad__c</columns>
        <columns>Plantel__c</columns>
        <columns>Nivel__c</columns>
        <columns>Programa__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filters>
        <label>Online</label>
    </listViews>
    <listViews>
        <fullName>Presencial</fullName>
        <columns>Modalidad__c</columns>
        <columns>Nivel__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Presencial</value>
        </filters>
        <label>Presencial</label>
    </listViews>
    <listViews>
        <fullName>SinPeriodo</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Nivel__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Periodicidad__c</columns>
        <columns>Periodo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Periodo__c</field>
            <operation>equals</operation>
        </filters>
        <label>Sin periodo</label>
    </listViews>
    <nameField>
        <displayFormat>OE-{0000000}</displayFormat>
        <label>Oferta Educativa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas Educativas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>